--- a/TRNSLT-172/bg/index.html
+++ b/TRNSLT-172/bg/index.html
@@ -3,7 +3,7 @@
    
 
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>Когато лекар трябва да помогне на близък човек, но все още няма лекарство, той прави чудо! - Ексклузивно интервю с лекаря, направил научно откритие за всички, които имат възпаления на ставите!
+    <title>Когато лекар трябва да помогне на близък човек, но все още няма лекарство, той прави чудо! - Ексклузивно интервю с лекаря, направил научно откритие за всички, които имат възпаление на ставите!
 </title>
 
 
@@ -6579,8 +6579,8 @@
             <div class="row">
                 <div class="col-sm-8">
                     <article>
-                        <h1> Когато лекар трябва да помогне на близък човек, но все още няма лекарство, той прави чудо! - Ексклузивно интервю с лекаря, направил научно откритие за всички, които имат възпаления на ставите!</h1>
-                        <p style="font-size: 18px"><em> Днес имаме възможност да интервюираме легендарния лекар Стефан Иванов.</em></p>
+                        <h1> Когато лекар трябва да помогне на близък човек, но все още няма лекарство, той прави чудо! - Ексклузивно интервю с лекаря, направил научно откритие за всички, които имат възпаление на ставите!</h1>
+                        <p style="font-size: 18px"><em> Днес имаме възможност да интервюираме легендарния д-р Стефан Иванов</em></p>
 
 <div class="module module-find-chiropractor">
 <p style="color: white"><b> Стефан Иванов,</b> роден през 1977 г. в Пловдив, България</p>
@@ -6594,7 +6594,7 @@
 </div><br>
 <p><b> - Здравейте, д-р Иванов! Разкажете малко за себе си!</b>
 </p>
-<p> На 44 години съм и се занимавам с  медицина от 16-годишна възраст. В Университета за първи път видях Мария, две години преди да стане моя съпруга. След обучението в Бристол до 2018 г. работех като хирург-ортопед. Канен съм като експерт в много телевизионни предавания по медицина, имам участия в научни конференции. Предложиха ми да преподавам в Бристол, но не се съгласих.  В момента се занимавам с нови научни изследвания.
+<p> На 44 години съм и се занимавам с  медицина от 16-годишна възраст. В Университета за първи път видях Мария, две години преди да стане моя съпруга. След обучението в Бристол до 2018 г. работех като хирург-ортопед. Канен бях  като експерт в много телевизионни предавания по медицина,  участвах в научни конференции. Предложиха ми да преподавам в Бристол, но не се съгласих.  В момента се занимавам с нови научни изследвания.
 </p>
                         <p><img alt height="100%" src="images/image23.png" vspace="10" width="100%"></p>
 
@@ -6637,7 +6637,7 @@
     <li> Артрит</li>
     <li> Остеоартрит</li>
     <li> Коксартроза</li>
-    <li> Остеоартрит</li>
+    <li> Подагра</li>
     <li> Остеохондроза</li>
     <li> Остеохондрит</li>
     <li> Остеопороза</li>
@@ -6645,7 +6645,7 @@
     <li> Гонартроза</li>
 </ul>
 <p><b> - Невероятно! Вие сте истински новатор на нашето време. Как го направихте?</b></p>
-<p> Беше време на упорита работа и невероятно силна мотивация. В борбата за този продукт преодолявах ситуации, в които други се отказваха.<b> По време на старта на Fortuflex, 19, 237 души започнаха да живеят пълноценно като завинаги забравиха за болката в ставите.</b>
+<p> Беше време на упорита работа и невероятно силна мотивация. В борбата за този продукт преодолявах ситуации, в които други се отказваха.<b> По време на старта на Fortuflex, 5463 души започнаха да живеят пълноценно като завинаги забравиха за болката в ставите.</b>
 </p>
 <p><b> - Къде може да се купи Fortuflex?</b></p>
 <p><b> Имаме официален сайт, където можете да поръчате оригиналния Fortuflex.</b></p>
@@ -6656,7 +6656,7 @@
 </script>,</b> включително!</p>
 <div class="module module-find-chiropractor">
    <h3 style="color: white; font-weight: bold"><b> Ето какво трябва да направите, за да поръчате Fortuflex с ОТСТЪПКА:</b>
-<p style="color: white"><b> undefined</b>:</p>
+
 <ul style="list-style: none; color: white">
     <li style="color: white"> 1. Отидете на официалния сайт на Fortuflex (бутон-под текста) и направете поръчка.
 </li>
@@ -6828,7 +6828,7 @@
 <div style="    border-top: 1px solid #60a5d4;  margin: 5px 0!important;   padding-bottom: 10px;"></div>
 
 <div class="ittem-comment">
-<img src="images/image5.png" class="ava-img">
+<img src="images/image11.png" class="ava-img">
 <p><strong> Екатерина Миленкова</strong></p>
 <p> Иван Веселинов, много ви благодаря, вече мисля за това. Можете ли да ми кажете колко време ще отнеме доставката?</p>
 
@@ -7052,7 +7052,7 @@
 <div class="ittem-comment">
 <img src="images/image20.jpg" class="ava-img">
 <p><strong> Офелия Петрова</strong></p>
-<p> Кажете ми къде да поръчам крема? Аптеките не го продават, а аз се страхувам да го купя от интернет.</p>
+<p> Кажете ми къде да поръчам крема? Аптеките не го продават, а аз се страхувам да го купя по интернет.</p>
 
 <p style="color: gray; padding-top: 10px;"> преди 27 минути</p>
 </div>
