--- a/TRNSLT-174/pl/index.html
+++ b/TRNSLT-174/pl/index.html
@@ -6588,9 +6588,9 @@
     <li style="margin: 0 0 0 0;color: white"> Wydział Nauk Medycznych Uniwersytetu Warszawskiego</li>
     <li style="margin: 0 0 0 0;color: white"> Uniwersytet Medyczny w Bristolu </li>
 </ul>
-<p style="color: white"> Do 2018 roku zajmował się ortopedią. Później, po chorobie, poświęcił się pracy naukowej. Jeden z najbardziej pożądanych  wśród profesjonalistów.</p>
+<p style="color: white"> Do 2018 roku zajmował się ortopedią. Później, po chorobie, poświęcił się pracy naukowej. Jeden z najbardziej pożądanych  lekarzy wśród profesjonalistów.</p>
 </div><br>
-<p><b> - Witaj, Janusze. Opowiedz mi trochę o sobie!</b>
+<p><b> - Witaj, Janusze. Prosze opowiedzić mi trochę o sobie!</b>
 </p>
 <p> Mam 44 lata i praktykuję medycynę od 16 roku życia. To właśnie na uniwersytecie po raz pierwszy zobaczyłem Marię, dwa lata przed tym, jak została moją żoną. Po Bristol University, pracowałem jako chirurg ortopedyczny do 2018 roku. Byłem zapraszany jako ekspert do wielu programów telewizyjnych o tematyce medycznej, na konferencje naukowe. Zostałem zaproszony do wykładania w Bristolu. Ale się nie zgodziłem, teraz zajmuję się nowymi badaniami naukowymi.</p>
                         <p><img alt height="100%" src="images/image23.png" vspace="10" width="100%"></p>
@@ -6652,7 +6652,6 @@
 </script>,</b> włącznie!</p>
 <div class="module module-find-chiropractor">
    <h3 style="color: white; font-weight: bold"><b> Oto, co należy zrobić, aby otrzymać ZNIŻKĘ na Fortuflex:</b>
-<p style="color: white"><b> undefined</b>:</p>
 <ul style="list-style: none; color: white">
     <li style="color: white"> 1. Przejdź na oficjalną stronę Fortuflex (przycisk - poniżej tekstu) i złóż zamówienie.
 </li>
@@ -6695,7 +6694,7 @@
 <input name="subid" type="hidden" value="{subid}">
 <input name="px" type="hidden" value="{px}">
 <br>
-                        <button type="submit" class="btnn"> Zamówienie</button>
+                        <button type="submit" class="btnn"> Złożyć zamówienie</button>
 
                 </form>
             </div>
@@ -6821,7 +6820,7 @@
 <div style="    border-top: 1px solid #60a5d4;  margin: 5px 0!important;   padding-bottom: 10px;"></div>
 
 <div class="ittem-comment">
-<img src="images/image5.png" class="ava-img">
+<img src="images/image11.png" class="ava-img">
 <p><strong> Katarzyna Szuszkiewicz</strong></p>
 <p> Władysław Kubiak, dziękuję bardzo, już się nad tym zastanawiam, czy może mi Pan powiedzieć, jak długo potrwa dostawa?</p>
 
