--- a/TRNSLT-173/index.html
+++ b/TRNSLT-173/index.html
@@ -6647,14 +6647,13 @@
 </p>
 <p><b> - Kde si můžete koupit Fortuflex?</b></p>
 <p><b> Máme oficiální web, kde si můžete objednat originální Fortuflex.</b></p>
-<p> Maria a já jsme se nedávno rozhodli oslavit naše výročí uvedení na trh tím, že poskytneme společnosti Fortuflex velkou slevu každému, kdo má potíže. Nyní může tuto nabídku využít každý.<b> sleva do (тут стоит число месяц и год)<script type="text/javascript">
+<p> Maria a já jsme se nedávno rozhodli oslavit naše výročí uvedení na trh tím, že poskytneme společnosti Fortuflex velkou slevu každému, kdo má potíže. Nyní může tuto nabídku využít každý.<b> sleva do <script type="text/javascript">
     var now = Date.now(),
     day = 1000 * 60 * 60 * 24;
     document.write(new Date(now).toLocaleDateString());
 </script>,</b> včetně!</p>
 <div class="module module-find-chiropractor">
    <h3 style="color: white; font-weight: bold"><b> Pro získání SLEVY Fortuflex musíte udělat následující:</b>
-<p style="color: white"><b> undefined</b>:</p>
 <ul style="list-style: none; color: white">
     <li style="color: white"> 1. Přejděte na oficiální web Fortuflex (tlačítko je pod textem) a proveďte objednávku.</li>
     <li style="color: white"> 2. Kvalifikovaný odborník vás bude co nejdříve kontaktovat. Odpoví na všechny vaše otázky týkající se Fortuflexu. A souhlasí s dodáním na vaši adresu.</li>
@@ -6743,7 +6742,7 @@
 <div class="ittem-comment">
 <img src="images/image29.png" class="ava-img">
 <p><strong> Beata Žigová</strong></p>
-<p> Jsem velmi vděčný za lék Dr. Tomašovi. S vaší ženou jsem měl podobný příběh, 3 roky mi nic nepomohlo, ale váš krém používám už 8 dní a nemám žádné bolesti. To je skvělý krém!</p>
+<p> Jsem velmi vděčná za lék Dr. Tomašovi. S vaší ženou jsem měl podobný příběh, 3 roky mi nic nepomohlo, ale váš krém používám už 8 dní a nemám žádné bolesti. To je skvělý krém!</p>
 <p style="color: gray; padding-top: 10px;"> Před 1 hodinou</p>
 </div>
 <div style="    border-top: 1px solid #60a5d4;  margin: 5px 0!important;   padding-bottom: 10px;"></div>
@@ -6751,7 +6750,7 @@
 <div class="ittem-comment">
 <img src="images/image1.jpg" class="ava-img">
 <p><strong> Lenka Moravková</strong></p>
-<p> Nejprve jsem si ho použil na zápěstí, pak jsem ho dal své sestře. Trpěla artritidou dlouhou dobu. Chtěl bych, abyste věděli, jak jste pomohli matce, moc děkuji za Fortuflex!
+<p> Nejprve jsem si ho použil na zápěstí, pak jsem ho dal své sestře. Trpěla artritidou dlouhou dobu. Chtěla bych, abyste věděli, jak jste pomohli matce, moc děkuji za Fortuflex!
 </p>
 <p style="color: gray; padding-top: 10px;"> Před 1 hodinou</p>
 </div>
@@ -6760,7 +6759,7 @@
 <div class="ittem-comment">
 <img src="images/image22.jpg" class="ava-img">
 <p><strong> Andrea Fialova</strong></p>
-<p> Něco takového jsem hledal dlouho. Objednal jsem si to a těším se na dodání k zahájení léčby!</p>
+<p> Něco takového jsem hledal dlouho. Objednala jsem si to a těším se na dodání k zahájení léčby!</p>
 <p style="color: gray; padding-top: 10px;"> Před 1 hodinou</p>
 </div>
 <div style="    border-top: 1px solid #60a5d4;  margin: 5px 0!important;   padding-bottom: 10px;"></div>
@@ -6852,7 +6851,7 @@
 <div class="ittem-comment">
 <img src="images/image27.png" class="ava-img">
 <p><strong> Eva Lavašová</strong></p>
-<p> Dlouho jsem hledal účinný lék, vybral jsem si tento krém. Hodně mi pomohl s klouby a za velmi malou cenu. Děkuji mnohokrát!
+<p> Dlouho jsem hledala účinný lék, vybrala jsem si tento krém. Hodně mi pomohl s klouby a za velmi malou cenu. Děkuji mnohokrát!
 </p>
 <p style="color: gray; padding-top: 10px;"> Před 1 hodinou</p>
 </div>
