--- a/OFFERS-308/mx/index.html
+++ b/OFFERS-308/mx/index.html
@@ -592,7 +592,7 @@ var d=new Date();
 var day=d.getDate();
 var month=d.getMonth() + 1;
 var year=d.getFullYear();
-document.write(month + "/" + day + "/" + year);
+document.write( day + "/" +  month + "/" + year);
 </script> hay:</b>
                                                         <br>
                                                         <b style="color: red"> 21 unidades.</b>
