--- a/OFFERS-310/co/lan-2/index.html
+++ b/OFFERS-310/co/lan-2/index.html
@@ -48,11 +48,11 @@
 					<div class="t-hour"></div>: <div class="t-min"></div>: <div class="t-sec"></div>
 				</div>
 				<div class="timer__desc">
-					<span> Hora</span>
-					<span> Minuto</span>
-					<span> Segundo</span>
+					<span> Horas</span>
+					<span> Minutos</span>
+					<span> Segundos</span>
 				</div>
-				<h3 class="timer__title"> En descuento quedan: 9 unidades</h3>
+				<h3 class="timer__title"> En descuento quedan: 9</h3>
 			</div>
 			<a class="btn" href="#offer"> SOLICITAR CON DESCUENTO</a>
 		</div>
@@ -224,7 +224,7 @@
 			</div>
 			<div class="price__item">
 				<p> Nuevo precio:</p>
-				<s> 128000 pesos</s>
+				<b> 128000 pesos</b>
 			</div>
 		</div>
 		<div class="intro__timer">
