--- a/OFFERS-284/es/index.html
+++ b/OFFERS-284/es/index.html
@@ -20,11 +20,12 @@
     margin: 0 auto">
   <div style="position: fixed;
     left: 0px;
+    bottom: 0;
     width: 100%;
-    bottom: 10px;
     padding: 10px 0;
     background: #b4edff7d;">
-      <a style="width: 90%;
+      <a style="width: 100%;
+      max-width: 1005px;
  font-family: Open Sans;
  cursor: pointer;
  padding: 0px 24px;
