--- a/OFFERS-310/co/lan-2/index.html
+++ b/OFFERS-310/co/lan-2/index.html
@@ -234,9 +234,9 @@
 					<div class="t-hour"></div>: <div class="t-min"></div>: <div class="t-sec"></div>
 				</div>
 				<div class="timer__desc">
-					<span> Hora</span>
-					<span> Minuto</span>
-					<span> Segundo</span>
+					<span> Horas</span>
+					<span> Minutos</span>
+					<span> Segundos</span>
 				</div>
 				<h3 class="timer__title"> Quedan en descuento: 9 unidas</h3>
 			</div>
