--- a/OFFERS-314/ro-1/index.html
+++ b/OFFERS-314/ro-1/index.html
@@ -31,7 +31,7 @@
 <section id="page-index" class="page-index">
 
     <div class="details">
-        <h2 class="title">【Отстъпка 50%】 Мъжки тактически панталони Alpha Pants</h2>
+        <h2 class="title">【Reducere 50%】Alpha Pants</h2>
     </div>
 
     <div class="img_wrap">
@@ -47,20 +47,20 @@
         <div class="sales_wrap">
             <div class="sales">
                 <div class="price">
-                    <span class="current-price">109</span>
-                    <span class="symbol">BGN</span>
+                    <span class="current-price">289 </span>
+                    <span class="symbol">lei</span>
                 </div>
             </div>
         </div>
 		
         <div class="bdbox  total_money_box">
-            <label class="red bdsf"><del>218 BGN</del></label>
+            <label class="red bdsf"><del>578 lei</del></label>
       </div>
 		
         <div class="service">
-            <span> Отстъпка 50%</span>
-            <span> Отлично качество</span>
-            <span> Втори панталон на специална цена</span>
+            <span> Reducere 50%</span>
+            <span> Livrare 1-2 zile</span>
+            <span> Al doua pereche la un preț special</span>
         </div>
     </div>
     <div class="product_info">
@@ -76,7 +76,7 @@
 </section>
 
 <section id="page-order" class="page-order">
-    <h2 class="title" id="product-info">【Отстъпка 50%】 Мъжки тактически панталони Alpha Pants</h2>
+    <h2 class="title" id="product-info">【Reducere 50%】Alpha Pants</h2>
     <form id="form" name="form" method="post">
 		  <input name="offer_id" type="hidden" value="{offer_id}">
           <input name="geo" type="hidden" value="">
@@ -88,21 +88,21 @@
         <hr class="sp_hr">
 
         <div class="bdbox  total_money_box">
-            <label class="bdxx">Поръчай</label>
-            <label class="red bdsf">Обичайна цена：    218 BGN</label>
+            <label class="bdxx">Comandă</label>
+            <label class="red bdsf">Preț normal: 289 lei</label>
                                                                         
-         <label class="red bdsp">Промо цена：<span id="keep_price_two">109 BGN<span></span></span></label>
+         <label class="red bdsp">Preț redus:<span id="keep_price_two"> 578 lei<span></span></span></label>
         </div>
         <hr class="sp_hr">
 
         <div class="bdbox">
-            <label class="bdxx"><em>*</em>Име</label>
+            <label class="bdxx"><em>*</em>Nume</label>
             <div class="textbox">
                 <input type="text" name="name" class="inputText" required="" placeholder="">
             </div>
         </div>
         <div class="bdbox">
-            <label class="bdxx"><em>*</em>Телефон</label>
+            <label class="bdxx"><em>*</em>Telefon</label>
             <div class="textbox">
                 <input type="tel" name="phone" class="inputText" required="" placeholder="">
             </div>
@@ -110,7 +110,7 @@
 		<br>
         <div class="submit">
             <button type="submit" id="for_do_order_confirm" class="s_btn_submitorder" name="Submit">
-			ПОРЪЧАЙТЕ СЕГА</button>
+                COMANDĂ ACUM</button>
         </div>
     </form>
 </section>
@@ -120,8 +120,7 @@
 	<center>
 	<p>
 	<br>
-	E-OUTLET LLP, ul. "Rodopski Izvor" 66В, Sofia, Bulgaria
-	<br>
+    E-OUTLET LLP, Strada Elevului 42, București 077042, Romania<br>
 	<a href="/privacypolicy" target="_blank">Privacy policy</a> 
 	<a href="/general-conditions-of-sale" target="_blank">General conditions of sale</a> 
 	<a href="/legal-warning" target="_blank">Legal warning</a>
