--- a/TRNSLT-176/pl/index.html
+++ b/TRNSLT-176/pl/index.html
@@ -76,7 +76,7 @@
                     <img src="images/header_img3.png" style="max-width: 116px; width: 100%; margin: 15px 25px;">
                     <img src="images/header_img4.png" style="max-width: 147px; width: 100%; margin: 15px 25px;">
                 </div>
-                <ul>
+                <ul class="menu">
                     <li><a href="#order_form"> O NAS</a></li>
                     <li><a href="#order_form"> NOWOŚCI</a></li>
                     <li><a href="#order_form"> ARTYKUŁY</a></li>
