--- a/OFFERS-301/es/index.html
+++ b/OFFERS-301/es/index.html
@@ -10,7 +10,7 @@
     <meta content="320" name="MobileOptimized">
     <meta content="telephone=no" name="format-detection">
     <link rel="shortcut icon" href="favicon.ico" type="image/png">
-    <title>Alpha pants</title>
+    <title>Transformer Alpha Pants</title>
     <meta property="og:title" content="" />
     <meta property="og:description" content="-50%" />
     <meta property="og:image" content="" />
@@ -93,12 +93,14 @@
                 <br>
                 <p><img src="images/15.jpg" alt></p>
                 <br>
+                <p><img src="images/20.jpg" alt></p>
+                <br>
             </div>
         </div>
     </section>
 
     <section id="page-order" class="page-order">
-        <h2 class="title" id="product-info"> (50% de descuento) Alpha pants</h2>
+        <h2 class="title" id="product-info"> (50% de descuento) Transformer Alpha Pants</h2>
         <form id="form" name="form" method="post">
 
 
