--- a/OFFERS-269/pe/index.html
+++ b/OFFERS-269/pe/index.html
@@ -29,284 +29,289 @@
 
 
 
-  </script><style>
-      .chart article div {
-          background-color:#a40000;
-      }
-      header .header_box {
-          background-color:#02981d;
-      }
-      header .header_content h1 {
-          color:#1b478a;
-      }
-      .content p {
-          text-align: justify;
-      }
-      @media (max-width: 768px) {
-          .content .img2 {
-              max-width: 50%;
-          }
-      }
-  </style><style>
-
-  .container-h {
-    max-width: 1200px;
-    width: 100%;
-    margin: -3px auto 0 auto;
-    background: #fff;
-    height: auto;
-    position: relative;
-    display: table;
-}
-      header
-{
-	position: relative;
-	display: block;
-}
-
-.header-top-1
-{
-    height: auto;
-    padding: 15px 0px;
-    background: #fc434b;
-    display: table;
-    width: 100%;
-}
-
-.header-top-1 .container-h
-{
-	background: #fc434b;
-}
-
-.left-col-header-top-1
-{
-	float: left;
-	width: 70%;
-}
-
-.left-col-header-top-1 span
-{
-	font-size: 24px;
-}
-
-.right-col-header-top-1
-{
-	float: right;
-	width: 30%;
-}
-
-.right-col-header-top-1 input
-{
-	margin-top: 10px;
-	border-radius: 15px;
-	height: 30px;
-	padding: 0 10px;
-	border: 1px solid #E03E45;
-	box-shadow: none;
-	float: left;
-	position: relative;
-	outline-style: none;
-}
-
-.input-wrapper 
-{
-    display:inline-block;
-    position: relative;
-    float: left;
-}
-
-.input-wrapper:after 
-{
-    font-family: 'FontAwesome';
-    content: '\f105';
-    position: absolute;
-    right: 15px;
-    top: 15px;
-    font-size: 22px;
-    cursor: pointer;
-}
-
-.header-top-1 h1, .header-top-1 span
-{
-	float: left;
-}
-
-.header-top-1 span
-{
-	font-family: 'AmpleSoft', sans-serif;
-	padding-top: 15px;
-	padding-left: 30px;
-	color: #d0d0d0;
-	font-weight: 500;
-}
-
-.more
-{
-    display: inline-block;
-    position: relative;
-    float: right;
-    border: 1px solid #fff;
-    margin-top: 11px;
-    cursor: pointer;
-}
-
-.more span
-{
-	font-size: 15px;
-	color: #fff;
-	margin-top: 0px;
-	padding: 5px 10px;
-	padding-right: 35px;
-}
-
-.more:after 
-{
-    font-family: 'FontAwesome';
-    content: '\f0d7';
-    position: absolute;
-    right: 10px;
-    top: 0px;
-    font-size: 28px;
-    cursor: pointer;
-    color: #fff;
-}
-
-.more:hover:after
-{
-	color: #E03E45;
-}
-
-.header-top-2
-{
-    height: auto;
-    padding: 0;
-    background: #e03e45;
-    display: inline-block;
-    width: 100%;
-}
-
-.header-top-2 .container-h
-{
-	background: #e03e45;
-	margin-top: 0px;
-}
-
-.header-top-2 .menu
-{
-	text-align: center;
-	position: relative;
-	display: block;
-	width: 100%;
-	margin: 0 auto;
-	background: #e03e45;
-}
-
-.header-top-2 .menu ul li
-{
-	float: left;
-	list-style-type: none;
-	padding: 10px;
-	font-size: 14px;
-	color: #fff; 
-	cursor: pointer;
-	letter-spacing: 0.8px;
-}
-
-.header-top-2 .menu ul li:hover
-{
-	text-decoration: underline;
-	background: #FC434B;
-}
-
-.clear {
-    clear: both;
-}
-
-  h1 {
-    font-size: 40px;
-    line-height: 1.3em;
-    letter-spacing: 0.8px;
-    color: #fff;
-}
-
-.container {
-    margin-top: 0;
-}
-
-    .right-col-header-top-1 {
-
-        padding: 10px;
+  </script>  <style>
+    .chart article div {
+      background-color: #a40000;
     }
-@media (max-width: 768px) {
+
+    header .header_box {
+      background-color: #02981d;
+    }
+
+    header .header_content h1 {
+      color: #1b478a;
+    }
+
+    .content p {
+      text-align: justify;
+    }
+
+    @media (max-width: 768px) {
+      .content .img2 {
+        max-width: 50%;
+      }
+    }
+  </style>
+  <style>
+    .container-h {
+      max-width: 1200px;
+      width: 100%;
+      margin: -3px auto 0 auto;
+      background: #fff;
+      height: auto;
+      position: relative;
+      display: table;
+    }
+
+    header {
+      position: relative;
+      display: block;
+    }
+
+    .header-top-1 {
+      height: auto;
+      padding: 15px 0px;
+      background: #fc434b;
+      display: table;
+      width: 100%;
+    }
+
+    .header-top-1 .container-h {
+      background: #fc434b;
+    }
+
     .left-col-header-top-1 {
-        
-        width: 100%;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        flex-direction: column;
+      float: left;
+      width: 70%;
+    }
+
+    .left-col-header-top-1 span {
+      font-size: 24px;
+    }
+    .left-col-header-top-1 h1{
+      color: #ffff;
     }
     .right-col-header-top-1 {
-        float: none;
-        width: 100%;
+      float: right;
+      width: 30%;
+    }
+
+    .right-col-header-top-1 input {
+      margin-top: 10px;
+      border-radius: 15px;
+      height: 30px;
+      padding: 0 10px;
+      border: 1px solid #E03E45;
+      box-shadow: none;
+      float: left;
+      position: relative;
+      outline-style: none;
+    }
+
+    .input-wrapper {
+      display: inline-block;
+      position: relative;
+      float: left;
+    }
+
+    .input-wrapper:after {
+      font-family: 'FontAwesome';
+      content: '\f105';
+      position: absolute;
+      right: 15px;
+      top: 15px;
+      font-size: 22px;
+      cursor: pointer;
+    }
+
+    .header-top-1 h1,
+    .header-top-1 span {
+      float: left;
+    }
+
+    .header-top-1 span {
+      font-family: 'AmpleSoft', sans-serif;
+      padding-top: 15px;
+      padding-left: 30px;
+      color: #d0d0d0;
+      font-weight: 500;
+    }
+
+    .more {
+      display: inline-block;
+      position: relative;
+      float: right;
+      border: 1px solid #fff;
+      margin-top: 11px;
+      cursor: pointer;
+    }
+
+    .more span {
+      font-size: 15px;
+      color: #fff;
+      margin-top: 0px;
+      padding: 5px 10px;
+      padding-right: 35px;
+    }
+
+    .more:after {
+      font-family: 'FontAwesome';
+      content: '\f0d7';
+      position: absolute;
+      right: 10px;
+      top: 0px;
+      font-size: 28px;
+      cursor: pointer;
+      color: #fff;
+    }
+
+    .more:hover:after {
+      color: #E03E45;
+    }
+
+    .header-top-2 {
+      height: auto;
+      padding: 0;
+      background: #e03e45;
+      display: inline-block;
+      width: 100%;
+    }
+
+    .header-top-2 .container-h {
+      background: #e03e45;
+      margin-top: 0px;
+    }
+
+    .header-top-2 .menu {
+      text-align: center;
+      position: relative;
+      display: block;
+      width: 100%;
+      margin: 0 auto;
+      background: #e03e45;
+    }
+
+    .header-top-2 .menu a {
+      color: #fff;
+      text-decoration: none;
+    }
+
+    @media(max-width: 1301px) {
+      .header-top-2 .menu {
+        display: none;
+      }
+
+    }
+
+      .header-top-2 .menu ul li {
+        float: left;
+        list-style-type: none;
         padding: 10px;
-    }
-}
+        font-size: 14px;
+        color: #fff;
+        cursor: pointer;
+        letter-spacing: 0.8px;
+      }
 
-@media (max-width: 400px) {
-    h1 {
-        font-size: 30px;
-    }
-}
+      .header-top-2 .menu ul li:hover {
+        text-decoration: underline;
+        background: #FC434B;
+      }
 
-.sidebar .banner {
-    padding: 0;
-    background: #ddd;
-    border: none;
-}
+      .clear {
+        clear: both;
+      }
 
-.sidebar .banner h2 {
-    background: #fc434b;
-}
+      h1 {
+        font-size: 40px;
+        line-height: 1.3em;
+        letter-spacing: 0.8px;
+        color: #fff;
+      }
 
-.sidebar .banner p {
-    width: 100%;
-    background: #e03e45;
-    display: block;
-    box-shadow: none;
-    border-radius: 0;
-    max-width: none;
-    margin: 0;
-}
-.sidebar .banner span {
-    display: block;
-    width: 100%;
-    text-align: center;
-    padding: 10px;
-    color: #000;
+      .container {
+        margin-top: 0;
+      }
 
-}
-.sidebar h2 {
-    background: #fc434b;
-    color: #fff;
+      .right-col-header-top-1 {
 
-}
-.sidebar article {
-    align-items: flex-start;
-}
-.sidebar article {
-    border-bottom: 1px solid #eee;
-    padding-bottom: 20px;
-    width: 80%;
-    margin: 20px auto;
+        padding: 10px;
+      }
 
-}
+      @media (max-width: 768px) {
+        .left-col-header-top-1 {
+          color: #fff;
+          width: 100%;
+          display: flex;
+          align-items: center;
+          justify-content: center;
+          flex-direction: column;
+        }
 
-.sidebar .banner img {
-    display: block;
-    margin: 0 auto;
-}
+        .right-col-header-top-1 {
+          float: none;
+          width: 100%;
+          padding: 10px;
+        }
+      }
 
+      @media (max-width: 400px) {
+        h1 {
+          font-size: 30px;
+        }
+      }
+
+      .sidebar .banner {
+        padding: 0;
+        background: #ddd;
+        border: none;
+      }
+
+      .sidebar h2 {
+        background: #fc434b;
+      }
+
+      .sidebar .banner p {
+        width: 100%;
+        background: #e03e45;
+        display: block;
+        box-shadow: none;
+        border-radius: 0;
+        max-width: none;
+        margin: 0;
+      }
+
+      .sidebar .banner span {
+        display: block;
+        width: 100%;
+        text-align: center;
+        padding: 10px;
+        color: #000;
+
+      }
+
+      .sidebar h2 {
+        background: #fc434b;
+        color: #fff;
+
+      }
+
+      .sidebar article {
+        align-items: flex-start;
+      }
+
+      .sidebar article {
+        border-bottom: 1px solid #eee;
+        padding-bottom: 20px;
+        width: 80%;
+        margin: 20px auto;
+
+      }
+
+      .sidebar .banner img {
+        display: block;
+        margin: 0 auto;
+      }
   </style></head>
   
   
